feat: Updated endpoint to get access request to employee and filter by assignedById